fix(console):  1. 完成 cluster 主要三个类的 mapper  单元测试 2. 完成 cluster runtime 等 关联穷举 实现：BuildFullSceneData