@@ -19,10 +19,7 @@
 package org.apache.eventmesh.dashboard.console.service.metadata;
 
 import org.apache.eventmesh.dashboard.console.entity.message.GroupEntity;
-import org.apache.eventmesh.dashboard.console.mapper.message.GroupMapper;
-import org.apache.eventmesh.dashboard.core.metadata.DataMetadataHandler;
 
-import java.util.Collections;
 import java.util.List;
 
 import org.springframework.stereotype.Service;
@@ -30,17 +27,18 @@ import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @Transactional
-public class GroupDataMetadataHandler implements DataMetadataHandler<GroupEntity> {
+public class GroupDataMetadataHandler extends AbstractDBDataMetadataHandler<GroupEntity> {
 
-    private GroupMapper groupMapper;
 
     @Override
     public void handleAll(List<GroupEntity> addData, List<GroupEntity> updateData, List<GroupEntity> deleteData) {
 
+
     }
 
+
     @Override
-    public List<GroupEntity> getData() {
-        return Collections.emptyList();
+    List<GroupEntity> doGetData() {
+        return List.of();
     }
 }
